# hexposer_image_processor

./: .gitignore  CMakeLists.txt  README.md
HexaHTML/: index.html
HexaHTML/css/: button.css  hexagon.css  ionicons.min.css  sidebar.css  style.css
HexaHTML/flip_test/: index.html  style.css
HexaHTML/images/: logo.psd
HexaHTML/js/: button.js  flip.js
src/: Client.cpp  Client.h  Hexagon.cpp  Hexagon.h  HexposerImageProcessor.cpp  HexposerImageProcessor.h  HexposerServerCommunicator.cpp  HexposerServerCommunicator.h  ImageProcessor.cc  ImageProcessor.cpp  ImageProcessor.h  Util.cpp  Util.h  main.cpp
